# RSM

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt
apps/MCManager/: .ChangeLog.md.kate-swp  CMakeLists.txt  ChangeLog  ChangeLog.md  README.md
apps/MCManager/examples/: GenericClient.h  Manager.cpp
apps/MCManager/inc/: IPCClient.h  IPCInterface.h  MCClient.h  MCClientID.h  MCConfig.h  MCFactory.h  MCManager.h  MCMessage.h  MCNewClientRequest.h  MCOperationRequest.h  MCRequestAck.h  MCTypes.h
apps/MCManager/src/: GenericClient.cpp  IPCClient.cpp  IPCInterface.cpp  MCClient.cpp  MCClientID.cpp  MCConfig.cpp  MCFactory.cpp  MCManager.cpp  MCMessage.cpp  MCNewClientRequest.cpp  MCOperationRequest.cpp  MCRequestAck.cpp  main.cpp
apps/MCManager/tests/: CMakeLists.txt  MessageTest.cpp  NewClientRequestTest.cpp  OperationRequestTest.cpp  main.cpp
apps/TransferManager/: CMakeLists.txt  ChangeLog.md  README.md
apps/TransferManager/examples/: CMakeLists.txt  ChangeLog.md  main.cpp
apps/TransferManager/inc/: TMUtility.h
apps/TransferManager/inc/public/: FTPDownloadClient.h  FTPTransferClient.h  FTPUploadClient.h  HTTPDownloadClient.h  HTTPTransferClient.h  HTTPUploadClient.h  StateMachine.h  TMConfig.h  TMFactory.h  TransferManager.h  TransferTypes.h  iTransferClient.h  iTransferRequest.h
apps/TransferManager/src/: .LCKmain.cpp~  FTPDownloadClient.cpp  FTPTransferClient.cpp  FTPUploadClient.cpp  HTTPDownloadClient.cpp  HTTPTransferClient.cpp  HTTPUploadClient.cpp  StateMachine.cpp  TMConfig.cpp  TMFactory.cpp  TMUtility.cpp  TransferManager.cpp  iTransferClient.cpp  iTransferRequest.cpp  main.cpp
apps/TransferManager/tests/: CMakeLists.txt  FactoryTest.cpp  iTransferRequestTest.cpp  main.cpp
apps/examples/: .ChangeLog.md.kate-swp  CMakeLists.txt  ChangeLog.md  IPCInterface.h  Manager.cpp  Monitor.cpp  Sender.cpp
apps/tests/: ChangeLog.md  RequestAckTest.cpp  testManager.cpp
libs/: CMakeLists.txt
libs/mosquittoClient/: CMakeLists.txt  README.md
libs/mosquittoClient/lib/: CMakeLists.txt  ChangeLog
libs/mosquittoClient/lib/inc/: FlexLogger.h  MosquittoSetting.h  MqttUtils.h
libs/mosquittoClient/lib/inc/public/: MosquittoConnection.h  MosquittoSetting.h  MqttMessage.h  MqttTypes.h  iMosquittoClient.h
libs/mosquittoClient/lib/src/: MosquittoConnection.cpp  MosquittoSetting.cpp  MqttMessage.cpp  iMosquittoClient.cpp
libs/mosquittoClient/tests/: CMakeLists.txt  ChangeLog  example.cpp
